--- a/src/style/fonts.scss
+++ b/src/style/fonts.scss
@@ -1,4 +1,8 @@
 @font-face {
+    font-family: 'semibold';
+    src: url(../assets/fonts/Montserrat-SemiBold.ttf);
+}
+@font-face {
     font-family: 'regular';
     src: url(../assets/fonts/Montserrat-Regular.ttf);
 }
